minor fixes, added overflow: hidden

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
   height: 100%;
   width: 100%;
-  /* overflow: hidden; */
+  overflow: hidden;
   
 }
