--- a/src/components/Panel4/style.css
+++ b/src/components/Panel4/style.css
@@ -14,7 +14,7 @@
     font-size: 100px;
     position: relative;
     left: 1210px;
-    top: -300px;
+    top: -340px;
     border: none;
 
 }
