--- a/src/components/Panel6/style.css
+++ b/src/components/Panel6/style.css
@@ -9,7 +9,7 @@
     background: transparent;
     font-size: 100px;
     position: relative;
-    top: -200px;
+    top: -370px;
     border: none;
 }
 .about-me-image{
